# osint-recon

./: .gitignore  Makefile  README.md  pyproject.toml  recon.py  requirements.txt  test_recon.py
osint_recon/: __init__.py  __main__.py  banner.py  cli.py  colors.py  http_client.py  platforms.py
osint_recon/modules/: __init__.py  domain.py  email.py  name.py  phone.py  username.py
tests/: test_recon.py
