[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-recon"
version = "2.0.0"
description = "OSINT Recon Tool - Full person reconnaissance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "stalss"},
]
dependencies = [
    "requests>=2.28.0",
    "python-whois>=0.9.4",
    "dnspython>=2.6.1",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
osint-recon = "osint_recon.cli:main"

[project.urls]
Homepage = "https://github.com/stalss/osint-recon"
Repository = "https://github.com/stalss/osint-recon"
Issues = "https://github.com/stalss/osint-recon/issues"

[tool.setuptools.packages.find]
include = ["osint_recon*"]
